enable sign ups

--- a/src/app/league-zone/league-landing/landing.component.html
+++ b/src/app/league-zone/league-landing/landing.component.html
@@ -13,9 +13,6 @@
     <button routerLink="/leagues/pdbls2/sign-up" matRipple class="mainbutton">
       Sign Up
     </button>
-    <button routerLink="/leagues/pdbls2/tier-list" matRipple class="mainbutton">
-      Tier List
-    </button>
     <button routerLink="/leagues/pdbls2/rules" matRipple class="mainbutton">
       Rules
     </button>
@@ -26,5 +23,26 @@
       class="mainbutton"
       >Discord</a
     >
+    <button
+      routerLink="/leagues/pdbls2/attack/draft"
+      matRipple
+      class="mainbutton"
+    >
+      Attack Drafting
+    </button>
+    <button
+      routerLink="/leagues/pdbls2/Defense/draft"
+      matRipple
+      class="mainbutton"
+    >
+      Defense Drafting
+    </button>
+    <button
+      routerLink="/leagues/pdbls2/speed/draft"
+      matRipple
+      class="mainbutton"
+    >
+      Speed Drafting
+    </button>
   </div>
 </div>
