--- a/src/app/league-zone/league-landing/landing.component.scss
+++ b/src/app/league-zone/league-landing/landing.component.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   background-color: var(--mat-sys-primary-container);
   color: var(--mat-sys-on-primary-container);
+  padding: 0.25rem;
   font-size: x-large;
   width: 12rem;
   color: var(--mat-sys-primary);
