--- a/src/app/drafts/matchup-overview/matchup/matchup.component.scss
+++ b/src/app/drafts/matchup-overview/matchup/matchup.component.scss
@@ -17,7 +17,7 @@
     max-width: 100%;
     width: fit-content;
     border-radius: 1rem;
-    background-color: var(--mat-sys-surface);
+    background-color: var(--pdz-surface);
     box-shadow: var(--pdz-level3);
   }
 }
