--- a/src/app/drafts/matchup-overview/matchup/overview/overview.component.scss
+++ b/src/app/drafts/matchup-overview/matchup/overview/overview.component.scss
@@ -28,7 +28,7 @@
         text-align: center;
         font-weight: 700;
         color: var(--mat-sys-secondary);
-        font-family: "Nasalization RG", sans-serif;
+        font-family: var(--pdz-font-fancy);
       }
 
       .team-coach-title {
