--- a/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.scss
+++ b/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.scss
@@ -161,7 +161,7 @@ section {
 .matchup-stage {
   font-size: 0.6em;
   line-height: 0.8em;
-  color: var(--mat-sys-primary);
+  color: var(--pdz-primary);
 }
 
 $matchup-sprite-size: 4rem;
