--- a/src/app/league-zone/league-drafting/league-drafting.component.scss
+++ b/src/app/league-zone/league-drafting/league-drafting.component.scss
@@ -36,7 +36,7 @@
         display: flex;
         flex-direction: column;
         .round-label {
-          color: var(--mat-sys-primary);
+          color: var(--pdz-primary);
           display: flex;
           height: fit-content;
           width: fit-content;
@@ -47,9 +47,7 @@
           position: sticky;
           left: 0;
           font-size: 0.8em;
-          font-family:
-            Nasalization RG,
-            sans-serif;
+          font-family: var(--pdz-font-fancy);
 
           mat-icon {
             color: var(--mat-sys-outline-variant);
@@ -123,7 +121,7 @@
       height: 4rem;
       width: 4rem;
       mat-icon {
-        color: var(--mat-sys-primary);
+        color: var(--pdz-primary);
         height: 1.5rem;
         width: 1.5rem;
       }
@@ -154,8 +152,8 @@
 
   .planner-link {
     flex-shrink: 0;
-    background-color: var(--mat-sys-primary);
-    color: var(--mat-sys-on-primary);
+    background-color: var(--pdz-primary);
+    color: var(--pdz-on-primary);
     box-shadow: var(--mat-sys-level2);
     cursor: pointer;
     &:active {
@@ -186,7 +184,7 @@
       }
 
       .pick-label {
-        color: var(--mat-sys-primary);
+        color: var(--pdz-primary);
         line-height: 0.8rem;
         font-size: 0.8em;
         font-weight: 600;
@@ -284,7 +282,7 @@
           height: 2.5rem;
         }
         .my-pokemon-index {
-          color: var(--mat-sys-primary);
+          color: var(--pdz-primary);
           width: 1.5rem;
           display: flex;
           justify-content: center;
@@ -292,16 +290,14 @@
           border-radius: 1rem;
           text-align: center;
           &.selected-pick {
-            background-color: var(--mat-sys-primary);
-            color: var(--mat-sys-on-primary);
+            background-color: var(--pdz-primary);
+            color: var(--pdz-on-primary);
           }
         }
         .my-pokemon-name,
         .my-pokemon-tier {
           font-weight: 500;
-          font-family:
-            Nasalization RG,
-            sans-serif;
+          font-family: var(--pdz-font-fancy);
         }
         .my-pokemon-name {
           flex-grow: 1;
@@ -335,7 +331,7 @@
           display: flex;
           width: 100%;
           align-items: center;
-          color: var(--mat-sys-primary);
+          color: var(--pdz-primary);
         }
 
         .my-draft-pick {
@@ -348,25 +344,25 @@
           column-gap: 0.25rem;
           border-radius: 0.5rem;
           box-shadow: var(--pdz-level1);
-          border: 2px solid var(--mat-sys-primary);
-          color: var(--mat-sys-on-primary);
+          border: 2px solid var(--pdz-primary);
+          color: var(--pdz-on-primary);
 
           &:not(.backup) {
-            background-color: var(--mat-sys-primary);
+            background-color: var(--pdz-primary);
             .my-pokemon-sprite {
               background-color: white;
             }
           }
 
           &.backup {
-            color: var(--mat-sys-primary);
+            color: var(--pdz-primary);
           }
           .my-pokemon-sprite {
             width: 2.5rem;
             height: 2.5rem;
           }
           .my-pokemon-index {
-            color: var(--mat-sys-primary);
+            color: var(--pdz-primary);
             width: 1.25rem;
             text-align: center;
             margin-left: -0.75rem;
@@ -374,9 +370,7 @@
           .my-pokemon-name,
           .my-pokemon-tier {
             font-weight: 500;
-            font-family:
-              Nasalization RG,
-              sans-serif;
+            font-family: var(--pdz-font-fancy);
           }
           .my-pokemon-name {
             flex-grow: 1;
@@ -391,7 +385,7 @@
         }
 
         .no-pick {
-          color: var(--mat-sys-primary);
+          color: var(--pdz-primary);
           padding: 0.125rem 0;
           text-align: center;
           align-self: center;
@@ -458,7 +452,7 @@
   border-radius: 1rem;
   margin-bottom: 2px;
   &:hover {
-    background-color: var(--mat-sys-surface);
+    background-color: var(--pdz-surface);
     box-shadow: var(--pdz-level1);
   }
 }
@@ -470,7 +464,7 @@
   width: 100%;
   max-height: 200px;
   overflow-y: auto;
-  background-color: var(--mat-sys-surface);
+  background-color: var(--pdz-surface);
   border: 1px solid var(--mat-sys-outline);
   border-radius: 0.5rem;
   box-shadow: var(--mat-sys-level2);
