--- a/src/app/league-zone/league-sidebar/league-sidebar.component.scss
+++ b/src/app/league-zone/league-sidebar/league-sidebar.component.scss
@@ -2,7 +2,7 @@
   padding: 0.25rem;
   .nav-title {
     font-size: small;
-    font-family: var(--pdz-fancy);
+    font-family: var(--pdz-font-fancy);
   }
   .nav-links {
     margin-left: 0.25rem;
