--- a/src/app/league-zone/league-trades/trade-card/trade-card.component.scss
+++ b/src/app/league-zone/league-trades/trade-card/trade-card.component.scss
@@ -44,7 +44,7 @@ $trade-sprite-size: 2rem;
   padding: $trade-item-spacing * 0.5;
   border: 1px solid var(--mat-sys-outline-variant);
   border-radius: 4px;
-  background-color: var(--mat-sys-surface);
+  background-color: var(--pdz-surface);
   gap: $trade-item-spacing * 0.5;
 }
 
