--- a/src/app/league-zone/league/league.component.scss
+++ b/src/app/league-zone/league/league.component.scss
@@ -6,9 +6,9 @@
   overflow: hidden;
   .widget-title {
     padding: 0.25rem;
-    font-family: var(--pdz-fancy);
-    background-color: var(--mat-sys-primary);
-    color: var(--mat-sys-on-primary);
+    font-family: var(--pdz-font-fancy);
+    background-color: var(--pdz-primary);
+    color: var(--pdz-on-primary);
     text-align: center;
   }
 
