--- a/src/app/util/matchup/typechart/typechart-core.component.scss
+++ b/src/app/util/matchup/typechart/typechart-core.component.scss
@@ -161,7 +161,7 @@ tbody {
 }
 
 .sprite-wrapper {
-  background-color: var(--mat-sys-surface);
+  background-color: var(--pdz-surface);
   display: flex;
   align-items: center;
   justify-content: center;
