--- a/src/app/util/tooltip/tooltip.component.scss
+++ b/src/app/util/tooltip/tooltip.component.scss
@@ -5,7 +5,7 @@
 
 .tooltip {
   position: fixed;
-  background: var(--mat-sys-surface);
+  background: var(--pdz-surface);
   color: var(--mat-sys-on-surface);
   padding: 8px;
   border-radius: 8px;
