--- a/src/styles/pdz-themes/_normal.scss
+++ b/src/styles/pdz-themes/_normal.scss
@@ -6,7 +6,8 @@ $theme: (
     on-secondary: #ffffff,
 
     background: #f7fdff,
-    surface: #f7fdff,
+    surface: #f3fbfd,
+    surface-variant: #d9eff2,
     surface-container: #edf5f7,
 
     on-surface: #151d1f,
