--- a/src/app/drafts/draft-overview/draft-stats/draft-stats.component.scss
+++ b/src/app/drafts/draft-overview/draft-stats/draft-stats.component.scss
@@ -18,7 +18,7 @@
   padding: 1rem;
   overflow-x: auto;
   border-radius: 1rem;
-  background-color: var(--mat-sys-surface);
+  background-color: var(--pdz-surface);
   box-shadow: var(--pdz-level3);
 }
 th,
