--- a/src/app/drafts/opponent-overview/opponent-overview.component.scss
+++ b/src/app/drafts/opponent-overview/opponent-overview.component.scss
@@ -9,7 +9,7 @@
   border-top: 1px solid var(--mat-sys-outline);
 
   margin-bottom: 0.5rem;
-  background-color: var(--mat-sys-surface);
+  background-color: var(--pdz-surface);
   box-shadow: var(--pdz-level2);
 }
 
