--- a/src/app/league-zone/league-rules-overview/league-rules/league-rules.component.scss
+++ b/src/app/league-zone/league-rules-overview/league-rules/league-rules.component.scss
@@ -5,7 +5,7 @@
 }
 
 .rule-title {
-  font-family: "Nasalization RG", sans-serif;
+  font-family: var(--pdz-font-fancy);
   font-weight: bold;
   font-size: larger;
 }
@@ -20,11 +20,11 @@
 }
 
 $border-color: var(--mat-sys-outline-variant);
-$header-bg: var(--mat-sys-surface);
+$header-bg: var(--pdz-surface);
 $header-bg-hover: var(--mat-sys-surface-variant);
 $body-bg: #fff;
 $text-color: var(--mat-sys-on-surface);
-$indicator-color: var(--mat-sys-primary);
+$indicator-color: var(--pdz-primary);
 $border-radius: 1rem;
 $horizontal-padding: 1rem;
 $vertical-padding: 0.5rem;
@@ -53,7 +53,7 @@ $vertical-padding: 0.5rem;
   align-items: center;
   padding: 1px $horizontal-padding 1px calc($horizontal-padding/2);
   cursor: pointer;
-  font-family: var(--pdz-fancy);
+  font-family: var(--pdz-font-fancy);
   background-color: $header-bg;
   color: $text-color;
   transition: background-color 150ms ease-out;
@@ -151,7 +151,7 @@ $vertical-padding: 0.5rem;
 .add-section {
   background-color: $header-bg;
   padding: $vertical-padding $horizontal-padding;
-  font-family: var(--pdz-fancy);
+  font-family: var(--pdz-font-fancy);
   font-weight: bold;
   display: flex;
   align-items: center;
@@ -172,7 +172,7 @@ $vertical-padding: 0.5rem;
   box-sizing: border-box;
   border-radius: calc($border-radius / 2);
   box-shadow: var(--mat-sys-level4);
-  background-color: var(--mat-sys-surface);
+  background-color: var(--pdz-surface);
   .accordion-item-header {
     padding: 0 $horizontal-padding;
     min-height: 3rem;
