--- a/src/app/league-zone/league-teams/league-team-card/league-team-card.component.scss
+++ b/src/app/league-zone/league-teams/league-team-card/league-team-card.component.scss
@@ -49,7 +49,7 @@
       .team-coaches {
         .team-coach {
           text-align: center;
-          color: var(--mat-sys-primary);
+          color: var(--pdz-primary);
           font-weight: 600;
           font-size: 0.8em;
           margin: 0;
@@ -81,7 +81,7 @@
       button {
         width: 1.5rem;
         height: 1.5rem;
-        color: var(--mat-sys-primary);
+        color: var(--pdz-primary);
         border-radius: 0.25rem;
         &:hover {
           color: var(--mat-sys-secondary);
@@ -97,7 +97,7 @@
     overflow: auto;
     .table-wrapper {
       width: 100%;
-      border: 1px solid var(--mat-sys-primary);
+      border: 1px solid var(--pdz-primary);
       border-radius: 1rem;
       overflow: hidden;
       font-size: 0.8em;
@@ -117,8 +117,8 @@
 
         th {
           font-weight: 600;
-          background-color: var(--mat-sys-primary);
-          color: var(--mat-sys-on-primary);
+          background-color: var(--pdz-primary);
+          color: var(--pdz-on-primary);
           white-space: nowrap;
         }
 
@@ -134,7 +134,7 @@
           text-align: center;
           white-space: nowrap;
           mat-icon {
-            color: var(--mat-sys-primary);
+            color: var(--pdz-primary);
           }
         }
 
