--- a/src/app/league-zone/league-tier-list/league-tier-list-form/league-tier-list-form.component.scss
+++ b/src/app/league-zone/league-tier-list/league-tier-list-form/league-tier-list-form.component.scss
@@ -79,9 +79,7 @@
     .header-label {
       text-align: center;
       font-weight: bold;
-      font-family:
-        Nasalization RG,
-        sans-serif;
+      font-family: var(--pdz-font-fancy);
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -100,13 +98,11 @@
     align-items: stretch;
 
     .header-label {
-      background-color: var(--mat-sys-primary);
-      color: var(--mat-sys-on-primary);
+      background-color: var(--pdz-primary);
+      color: var(--pdz-on-primary);
       text-align: center;
       font-weight: bold;
-      font-family:
-        Nasalization RG,
-        sans-serif;
+      font-family: var(--pdz-font-fancy);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -190,7 +186,7 @@
 }
 
 .drag-placeholder {
-  border: dotted 2px var(--mat-sys-primary);
+  border: dotted 2px var(--pdz-primary);
   height: 2.5rem;
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
@@ -203,8 +199,8 @@
 }
 
 .new-tier {
-  background-color: var(--mat-sys-primary);
-  color: var(--mat-sys-on-primary);
+  background-color: var(--pdz-primary);
+  color: var(--pdz-on-primary);
   text-align: center;
   height: 100%;
 
@@ -214,14 +210,14 @@
     top: 0px;
     position: sticky;
     mat-icon {
-      color: var(--mat-sys-on-primary);
+      color: var(--pdz-on-primary);
     }
   }
 }
 
 .new-tier-group {
-  background-color: var(--mat-sys-primary);
-  color: var(--mat-sys-on-primary);
+  background-color: var(--pdz-primary);
+  color: var(--pdz-on-primary);
   text-align: center;
   flex-shrink: 0;
   width: 4rem;
@@ -233,7 +229,7 @@
       font-size: 2.5rem;
       width: fit-content;
       height: fit-content;
-      color: var(--mat-sys-on-primary);
+      color: var(--pdz-on-primary);
     }
   }
 }
