--- a/src/app/league-zone/league-tier-list/league-tier-list-form/pokemon-edit-dialog/pokemon-edit-dialog.component.scss
+++ b/src/app/league-zone/league-tier-list/league-tier-list-form/pokemon-edit-dialog/pokemon-edit-dialog.component.scss
@@ -86,7 +86,7 @@ h2 {
   @include mat.dialog-overrides(
     (
       subhead-weight: 700,
-      subhead-font: var(--pdz-fancy),
+      subhead-font: var(--pdz-font-fancy),
       subhead-color: var(--mat-sys-primary),
       subhead-size: 1.2em,
     )
