--- a/src/app/pages/top-navbar/top-navbar.component.scss
+++ b/src/app/pages/top-navbar/top-navbar.component.scss
@@ -32,7 +32,7 @@ header {
 .menu-tab {
   padding: 0.5rem;
   border-radius: 0.5rem;
-  font-family: "Nasalization RG", sans-serif;
+  font-family: var(--pdz-font-fancy);
   &:hover {
     background-color: var(--mat-sys-surface-container);
   }
@@ -58,7 +58,7 @@ header {
 
 svg {
   .logo-top {
-    fill: var(--mat-sys-primary);
+    fill: var(--pdz-primary);
   }
   .logo-bottom {
     fill: var(--mat-sys-tertiary);
