--- a/src/app/tools/quick-draft/quick-draft-picks/quick-draft-picks.component.scss
+++ b/src/app/tools/quick-draft/quick-draft-picks/quick-draft-picks.component.scss
@@ -38,7 +38,7 @@
 }
 
 .qd-reroll {
-  color: var(--mat-sys-primary);
+  color: var(--pdz-primary);
   font-size: 1.5em;
   align-items: center;
   display: flex;
@@ -55,7 +55,7 @@
     }
   }
   &:hover {
-    border: 1px solid var(--mat-sys-primary);
+    border: 1px solid var(--pdz-primary);
   }
 }
 
@@ -120,7 +120,7 @@
     width: 100%;
     text-align: center;
     font-size: 1.2em;
-    font-family: var(--pdz-fancy);
+    font-family: var(--pdz-font-fancy);
     border-bottom: 2px solid var(--mat-sys-outline);
   }
 }
@@ -180,7 +180,7 @@
 }
 
 .active-pick {
-  color: var(--mat-sys-primary);
+  color: var(--pdz-primary);
 }
 
 .no-selected {
@@ -212,7 +212,7 @@
   text-align: center;
   column-gap: 1rem;
   font-size: 0.8em;
-  color: var(--mat-sys-primary);
+  color: var(--pdz-primary);
 }
 
 .option-stats {
@@ -239,7 +239,7 @@
       justify-content: center;
       width: 2rem;
       height: 2rem;
-      background-color: var(--mat-sys-surface);
+      background-color: var(--pdz-surface);
       font-family: var(--pdz-font-regular);
       border-radius: 0.25rem;
       box-shadow: var(--pdz-level2);
