--- a/src/app/tools/quick-draft/quick-draft-setting/quick-draft-setting.component.scss
+++ b/src/app/tools/quick-draft/quick-draft-setting/quick-draft-setting.component.scss
@@ -14,7 +14,7 @@
 
 h1,
 h2 {
-  font-family: var(--pdz-fancy);
+  font-family: var(--pdz-font-fancy);
 }
 
 h2 {
@@ -22,7 +22,7 @@ h2 {
 }
 
 .qd-template {
-  font-family: var(--pdz-fancy);
+  font-family: var(--pdz-font-fancy);
   width: 15rem;
   min-height: 12rem;
   padding: 1rem;
