--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,12 @@
 @use "pdz-theming";
 @use "mat-styles";
 
+@use "@angular/material" as mat;
+
+@use "sass:map";
+@use "variables" as *;
+@use "mixins" as *;
+
 @font-face {
   font-family: "Nasalization RG";
   src: url("../assets/fonts/nasalization-pd.otf") format("truetype");
@@ -104,12 +110,30 @@ $screen-size-medium: 768px;
 }
 
 :root {
-  --pdz-fancy: Nasalization RG, sans-serif;
-  --pdz-font-fancy: Nasalization RG;
-  --pdz-font-regular: Nunito;
+  --pdz-font-fancy: Nasalization RG, sans-serif;
+  --pdz-font-regular: Nunito, sans-serif;
 
   --pdz-screen-size-medium: $screen-size-medium;
   --pdz-screen-size-large: $screen-size-large;
+  @include apply-theme(map.get(map.get($themes, normal), light));
+}
+
+body {
+  @each $theme-name, $variations in $themes {
+    @each $variation-name, $palette in $variations {
+      &[pdz-theme="#{$theme-name}"][pdz-theme-mode="#{$variation-name}"] {
+        @include apply-theme($palette);
+      }
+    }
+  }
+  *,
+  *::before,
+  *::after {
+    transition:
+      background-color 0.3s ease,
+      color 0.3s ease,
+      border-color 0.3s ease;
+  }
 }
 
 $option-lineheight: 3rem;
